# kcl-lsp

./: .codespellrc  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .vscodeignore  Cargo.toml  Dockerfile  Makefile  README.md  package.json  tsconfig.json
.cargo/: config
.github/: dependabot.yml
.github/workflows/: cargo-build-wasm.yml  cargo-build.yml  cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  docker-image.yml  make-release.yml  typos.yml  vscode.yml  yarn.yml
client/: package.json
client/src/: bootstrap.ts  client.ts  commands.ts  config.ts  ctx.ts  extension.ts  lsp_ext.ts  main.ts  persistent_state.ts  undefinable.ts  util.ts
client/src/test/: runTest.ts
client/src/test/suite/: index.ts
release/: Cargo.toml
release/src/: build.rs  main.rs
src/: lib.rs  main.rs
src/lang/: mod.rs  semantic_tokens.rs
src/server/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
