[package]
name = "kcl-lsp"
description = "A language server for KCL."
authors = ["KittyCAD Inc <kcl@kittycad.io>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["cargo", "derive", "env", "unicode"] }
dashmap = { version = "5.5.3", features = ["serde"] }
kcl-lib = "0.1.3"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde"] }
signal-hook = "0.3.17"
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }
