[package]
name = "kcl-language-server"
description = "A language server for KCL."
authors = ["KittyCAD Inc <kcl@kittycad.io>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["cargo", "derive", "env", "unicode"] }
dashmap = "5.5.3"
#kcl-lib = "0.1.3"
kcl-lib = { path = "../modeling-app/src/wasm-lib/kcl", default-features = false }
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
tracing-subscriber = { version = "0.3.17", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
signal-hook = "0.3.17"
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tower-lsp = { version = "0.20.0", default-features = false, features = ["runtime-agnostic"] }

[workspace]
members = [
	"wasm",
]
