[package]
name = "release"
version = "0.1.0"
edition = "2021"
authors = ["KittyCAD Inc <kcl@kittycad.io>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["cargo", "derive", "env", "unicode"] }
flate2 = "1.0.28"
log = { version = "0.4.21", features = ["serde"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
tracing-subscriber = { version = "0.3.18", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }
time = "0.3.36"
xshell = "0.2.6"
zip = "0.6.6"
tokio = { version = "1.37.0", features = ["full"] }
lazy_static = "1.4.0"
